fix(tabs): extra spacing between tab and tab content in ie 11
closes #3748

--- a/src/clr-angular/layout/tabs/_tabs.clarity.scss
+++ b/src/clr-angular/layout/tabs/_tabs.clarity.scss
@@ -32,6 +32,12 @@ button.nav-link {
   display: inline;
 }
 
+@include fixForIE11AndUp {
+  .tab-content {
+    display: inline-block;
+  }
+}
+
 .tabs-vertical {
   display: flex;
 
